--- a/EduMultiPro 3 Parte/MVC1/app/templates/admin/5-aula.html
+++ b/EduMultiPro 3 Parte/MVC1/app/templates/admin/5-aula.html
@@ -105,7 +105,7 @@
                                         <td>{{ aula['ID'] }}</td>
                                         <td>{{ aula['Aula_Nombre'] }}</td>
                                         <td>{{ aula['Materia_Nombre'] }}</td>
-                                        <td>{{ aula['Curso_Nombre'] }}</td>
+                                        <td>{{ aula['Curso_Jornada'] }}</td>
                                         <td>{{ aula['Profesor'] }}</td>
                                         <td><button class="info"><i class="fa-solid fa-circle-info"></i></button></td>
                                         <td>
