--- a/EduMultiPro 3 Parte/MVC1/app/static/1-css/1.css
+++ b/EduMultiPro 3 Parte/MVC1/app/static/1-css/1.css
@@ -19,12 +19,13 @@
     --azul: #007bbd;
     --blanco: rgb(253, 243, 229);
     --gris: rgb(99, 95, 95);
+    --fondo: #e6f0fa;
 }
 .contenedor{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: var(--gris-medio);
+    background: var(--fondo);
     margin: 0;
     padding: 0;
     width: 100%;
