--- a/EduMultiPro 3 Parte/MVC1/app/static/1-css/2.css
+++ b/EduMultiPro 3 Parte/MVC1/app/static/1-css/2.css
@@ -20,12 +20,13 @@
     --blanco: rgb(253, 243, 229);
     --gris: rgb(99, 95, 95);
     --azulClaro: #4aa2d1;
+    --fondo: #e6f0fa;
 }
 .contenedor{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: var(--gris-claro);
+    background: var(--fondo);
     margin: 0;
     padding: 0;
     width: 100%;
@@ -175,7 +176,7 @@ thead{
 #tablaUsuarios th, td{
     padding: 10px;
     text-align: center !important;
-    border-bottom: 1px solid rgb(173, 173, 173);
+    border-bottom: 1px solid var(--azul-primario) !important;
 }
 
 button{
