--- a/EduMultiPro 3 Parte/MVC1/app/templates/admin/5.4Personas.html
+++ b/EduMultiPro 3 Parte/MVC1/app/templates/admin/5.4Personas.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aula</title>
+  <title>Integrantes</title>
   <link rel="icon" href="{{ url_for('static', filename='img/icono.png') }}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!--libreria de logos-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='1-css/5.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='1-css/5.4.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--permite que sangan las alertas-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--pagina para iconos-->
   <!-- jquery -->
@@ -78,77 +78,58 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
+
+                <div class="row" id="nav">
+
+                   <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.verAula') }}"><button id="principal">Pricipal</button></a></div>
+                   <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.Trabajos') }}"><button id="trabajo">Trabajos</button></a></div>
+                   <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.Notas') }}"><button id="nota">Notas</button></a></div>
+                   <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.Personas') }}"><button id="persona">Personas</button></a></div>
+                   <div class="col-12 col-md-4 col-xl-4"></div>
+
+                </div>
+
                 <div class="titulo">
-                    <h1>Aulas Actuales</h1>
-                    <a href="{{ url_for('admin_bp.crear_aula') }}">
-                        <button class="crear" id="btnAgregarUsuario"> <i class="fas fa-user-plus"></i>Crear Aula</button>
-                    </a>
+                    <h1>Personas</h1>
                 </div>
 
-                <div class="modificarAula" id="modificarAula" style="display:none;">
-                  <h1>Modificar Aula</h1>
-                  <form action="{{ url_for('admin_bp.modificar_aula') }}" method="POST">
-                    <input type="hidden" name="id" id="editarAulaID">
-
-                    <input type="text" name="nombre" id="editarAulaNombre" placeholder="Nombre del Aula" required>
-
-                    <select name="materia_id" id="editarMateria" required>
-                      {% for materia in materias %}
-                        <option value="{{ materia['ID'] }}">{{ materia['Materia_Nombre'] }}</option>
-                      {% endfor %}
-                    </select>
-
-                    <button type="submit" class="btn-guardar">Guardar cambios</button>
-                    <button type="button" class="btn-cancelar" onclick="cancelarEdicionAula()">Cancelar</button>
-                  </form>
-                </div>
-
-                <div class="contenedor-tabla">
-                    <table class="tablaUsuarios" id="tablaUsuarios">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre Aula</th>
-                                <th>Materia</th>
-                                <th>Curso</th>
-                                <th>Profesor</th>
-                                <th>Ver Aula</th>
-                                <th>Modificar</th>
-                                <th>Eliminar</th>
-                            </tr>
-                        </thead>
-                        
-                        <tbody>
-                            {% if aulas %}
-                                {% for aula in aulas %}
+                    <div class="contenedor-tabla">
+                        <table class="tablaUsuarios" id="tablaUsuarios">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Primer Nombre</th>
+                                    <th>Segundo Nombre</th>
+                                    <th>Primer Apellido</th>
+                                    <th>Segundo Apellido</th>
+                                </tr>
+                            </thead>
+                            <tbody>
                                     <tr>
-                                        <td>{{ aula['ID'] }}</td>
-                                        <td>{{ aula['Aula_Nombre'] }}</td>
-                                        <td>{{ aula['Materia_Nombre'] }}</td>
-                                        <td>{{ aula['Curso_Jornada'] }}</td>
-                                        <td>{{ aula['Profesor'] }}</td>
-                                        <td>
-                                          <form action="{{ url_for('admin2_bp.verAula') }}" method="GET">
-                                            <input type="hidden" name="aula_id" value="{{ aula['ID'] }}">
-                                            <button type="submit" class="informacion" id="btninformacion">
-                                              <i class="fa-solid fa-circle-info"></i>
-                                            </button>
-                                          </form>
-                                        </td>
-                                        <td><button class="modificar"><i class="fa-solid fa-gear"></i></button></td>
-                                        <td>
-                                        <form action="{{ url_for('admin_bp.eliminar_aula', id=aula['ID']) }}" method="POST" onsubmit="return confirmarEliminacion()">
-                                          <button class="btn-icon eliminar" type="submit">
-                                              <i class="fa-solid fa-trash"></i> Eliminar
-                                          </button>
-                                        </form>
-                                      </td>
+                                        <td>1</td>
+                                        <td>juan</td>
+                                        <td>pedro</td>
+                                        <td>miguel</td>
+                                        <td>gonzales</td>
                                     </tr>
-                                {% endfor %}
-                              {% endif %}
-                        </tbody>
-                    </table>
-                </div>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>sebastian</td>
+                                        <td>alejandro</td>
+                                        <td>castilla</td>
+                                        <td>zapata</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>juan</td>
+                                        <td>perez</td>
+                                        <td>quintero</td>
+                                        <td>domingo</td>
+                                    </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
             </div>
         </div>
     </div>
@@ -168,6 +149,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="{{ url_for('static', filename='1-js/5.1.js') }}"></script>
+  <script src="{{ url_for('static', filename='1-js/5.4.js') }}"></script>
 </body>
 </html>
