--- a/EduMultiPro 3 Parte/MVC1/app/templates/admin/5.7modificarTarea.html
+++ b/EduMultiPro 3 Parte/MVC1/app/templates/admin/5.7modificarTarea.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trabajos</title>
+  <title>Crear Trabajo</title>
   <link rel="icon" href="{{ url_for('static', filename='img/icono.png') }}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!--libreria de logos-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='1-css/5.3.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='1-css/5.7.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--permite que sangan las alertas-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--pagina para iconos-->
   <!-- jquery -->
@@ -78,77 +78,31 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
+                <a href="{{ url_for('admin2_bp.Trabajos', aula_id=aula_id) }}">
+                    <button id="salir">Salir</button>
+                </a>
+                <div class="parte1">
+                    <h1>Modificar Trabajo</h1>
+                    <form action="{{ url_for('admin2_bp.guardarCambiosTrabajo') }}" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="trabajo_id" value="{{ trabajo.ID }}">
+                        <input type="hidden" name="aula_id" value="{{ trabajo.aula_id }}">
 
-                <div class="row" id="nav">
+                        <label for="titulo">Título:</label>
+                        <input type="text" id="titulo" name="titulo" value="{{ trabajo.Titulo_Trabajo }}" required>
 
-                    <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.verAula', aula_id=aula_id) }}"><button id="principal">Pricipal</button></a></div>
-                    <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.Trabajos', aula_id=aula_id) }}"><button id="trabajo">Trabajos</button></a></div>
-                    <div class="col-12 col-md-2 col-xl-2"><a href="{{ url_for('admin2_bp.Notas', aula_id=aula_id) }}"><button id="persona">Notas</button></a></div>
-                    <div class="col-12 col-md-2 col-xl-2">
-                        {% if aula_id %}
-                            <a href="{{ url_for('admin2_bp.Personas', aula_id=aula_id) }}">
-                                <button id="persona">Personas</button>
-                            </a>
-                        {% else %}
-                            <a href="{{ url_for('admin2_bp.Personas') }}">
-                                <button id="persona">Personas</button>
-                            </a>
-                        {% endif %}
-                    </div>
-                   <div class="col-12 col-md-4 col-xl-4"></div>
+                        <label for="descripcion">Descripción:</label>
+                        <textarea id="descripcion" name="descripcion" required>{{ trabajo.Descripcion_Trabajo }}</textarea>
 
+                        <label for="fecha">Fecha de entrega:</label>
+                        <input type="date" id="fecha" name="fecha" value="{{ trabajo.Fecha_Trabajo.strftime('%Y-%m-%d') }}" required>
+
+                        <label for="archivo">Archivo (opcional):</label>
+                        <input type="file" id="archivo" name="archivo" multiple>
+
+                        <button type="submit">Modificar</button>
+                    </form>
                 </div>
-
-                <div class="titulo">
-                    <h1>Trabajos</h1>
-                    <a href="{{ url_for('admin2_bp.crearTrabajo', aula_id=aula_id) }}">
-                        <button class="crear" id="btnAgregarUsuario">Crear Trabajo</button>
-                    </a>
-                </div>
-
-                    <div class="contenedor-tabla">
-                        <table class="tablaUsuarios" id="tablaUsuarios">
-                            <thead>
-                                <tr>
-                                    <th>Título</th>
-                                    <th>Fecha Entrega</th>
-                                    <th>Información</th>
-                                    <th>Modificar</th>
-                                    <th>Eliminar</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for trabajo in trabajos %}
-                                    <tr>
-                                        <td>{{ trabajo.Titulo_Trabajo }}</td>
-                                        <td>{{ trabajo.Fecha_Trabajo.strftime('%d/%m/%Y') }}</td>
-                                        <td>
-                                            <form>
-                                                <input type="hidden" name="trabajo_id" value="{{ trabajo.ID }}">
-                                                <button type="submit" class="informacion" id="btninformacion">
-                                                    <i class="fa-solid fa-circle-info"></i>
-                                                </button>
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form action="{{ url_for('admin2_bp.editarTrabajo') }}" method="GET" style="display:inline;">
-                                                <input type="hidden" name="aula_id" value="{{ aula_id }}">
-                                                <input type="hidden" name="trabajo_id" value="{{ trabajo.ID }}">
-                                                <button type="submit" class="crear" id="btnAgregarUsuario">Modificar</button>
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form action="{{ url_for('admin2_bp.eliminar_trabajo', id=trabajo.ID) }}" method="POST" onsubmit="return confirmarEliminacion()">
-                                                <button class="btn-icon eliminar" type="submit">
-                                                    <i class="fa-solid fa-trash"></i> Eliminar
-                                                </button>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                
             </div>
         </div>
     </div>
@@ -168,6 +122,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="{{ url_for('static', filename='1-js/5.3.js') }}"></script>
+  
 </body>
 </html>
